--- a/src/Club/LayoutBundle/Resources/views/Default/fields.html.twig
+++ b/src/Club/LayoutBundle/Resources/views/Default/fields.html.twig
@@ -1,40 +1,27 @@
 {% block form_row %}
 {% spaceless %}
-    <div class="control-group {% if errors|length > 0%}error{% endif %}">
+    <div class="form-group {% if errors|length > 0%}has-error{% endif %}">
         {{ form_label(form) }}
-        <div class="controls">
+        <div class="col-sm-10">
             {{ form_widget(form) }}
+
             {% if help is defined %}
-                {% for h in help %}
-                    <span class="help-block">{{ h|raw|trans }}</span>
-                {% endfor %}
+            {% for h in help %}
+            <small><span class="help-block">{{ h|raw|trans }}</span></small>
+            {% endfor %}
             {% endif %}
+
             {{ form_errors(form) }}
         </div>
     </div>
 {% endspaceless %}
 {% endblock form_row %}
 
-{% block form_label %}
-{% spaceless %}
-    {% if not compound %}
-        {% set label_attr = label_attr|merge({'for': id}) %}
-    {% endif %}
-    {% if required %}
-        {% set label_attr = label_attr|merge({'class': (label_attr.class|default('') ~ ' required')|trim}) %}
-    {% endif %}
-    {% if label is empty %}
-        {% set label = name|humanize %}
-    {% endif %}
-    <label class="control-label" {% for attrname, attrvalue in label_attr %} {{ attrname }}="{{ attrvalue }}"{% endfor %}>{{ label|trans({}, translation_domain) }}</label>
-{% endspaceless %}
-{% endblock form_label %}
-
 {% block form_errors %}
 {% spaceless %}
     {% if errors|length > 0 %}
         {% for error in errors %}
-            <span class="help-inline">{{
+            <span class="help-block">{{
                 error.messagePluralization is null
                     ? error.messageTemplate|trans(error.messageParameters, 'validators')
                     : error.messageTemplate|transchoice(error.messagePluralization, error.messageParameters, 'validators')
