--- a/src/Club/UserBundle/Resources/views/AdminUser/index.html.twig
+++ b/src/Club/UserBundle/Resources/views/AdminUser/index.html.twig
@@ -15,17 +15,7 @@ $(document).ready(function() {
 {% endblock %}
 
 {% block pagenav %}
-<nav class="navbar navbar-default" role="navigation">
-    <div class="container-fluid">
-        <ul class="nav navbar-nav">
-            <li><a href="{{ path('admin_user_new') }}">{% trans %}Create user{% endtrans %}</a></li>
-            <li><a href="{{ path('club_user_adminuserfilter_index') }}">{% trans %}Search{% endtrans %}</a></li>
-            <li><a href="{{ path('club_user_adminuserimport_index') }}">{% trans %}Import users{% endtrans %}</a></li>
-            <li><a href="{{ path('club_user_adminuser_csv') }}">{% trans %}Export CSV{% endtrans %}</a></li>
-            <li><a href="{{ path('club_user_adminuser_message') }}">{% trans %}Send message{% endtrans %}</a></li>
-        </ul>
-    </div>
-</nav>
+{% include "ClubUserBundle:AdminUser:publicHeader.html.twig" %}
 {% endblock %}
 
 {% block body %}
