--- a/src/Club/UserBundle/Resources/views/AdminUser/new.html.twig
+++ b/src/Club/UserBundle/Resources/views/AdminUser/new.html.twig
@@ -1,5 +1,9 @@
 {% extends "ClubUserBundle::base.html.twig" %}
 
+{% block pagenav %}
+{% include "ClubUserBundle:AdminUser:publicHeader.html.twig" %}
+{% endblock %}
+
 {% block body %}
 <form method="post" action="{{ path('admin_user_create') }}" class="form-horizontal">
 {% include "ClubUserBundle:AdminUser:form.html.twig" %}
