--- a/src/Club/MenuBundle/Resources/views/Default/topMenu.html.twig
+++ b/src/Club/MenuBundle/Resources/views/Default/topMenu.html.twig
@@ -63,7 +63,7 @@
             {% else %}
                 <li class="dropdown" id="menuLogin">
                 <a class="dropdown-toggle" href="#" data-toggle="dropdown" id="navLogin">Login</a>
-                <div class="dropdown-menu" style="padding:17px; width: 400px;">
+                <div class="dropdown-menu" style="padding:17px; width: 400px;" id="slidedownMenu">
 
                     <form class="form-horizontal" role="form" method="POST" action="{{ path('login_check') }}">
                         <div class="form-group">
