Improved design on weather.

--- a/src/Club/LayoutBundle/Resources/public/css/mystyle.css
+++ b/src/Club/LayoutBundle/Resources/public/css/mystyle.css
@@ -73,3 +73,10 @@ div.calendar-header span.date {
 .pointer {
     cursor: pointer;
 }
+.weather-img {
+    width: 65px;
+    float: left;
+}
+.weather-body {
+    float: left;
+}
