--- a/src/Club/ExchangeBundle/Resources/views/Exchange/index.html.twig
+++ b/src/Club/ExchangeBundle/Resources/views/Exchange/index.html.twig
@@ -7,39 +7,37 @@
 {% block body %}
 <p>{% trans %}If you want to go play but dont have a partner, you can write in a timestamp here when you can play. Other can contact you and you can meet up and play a game.{% endtrans %}</p>
 
-<table class="table">
-  <thead>
-    <tr class="bg">
-      <th>{% trans %}Open{% endtrans %}</th>
-      <th>{% trans %}Play time{% endtrans %}</th>
-      <th>{% trans %}Location{% endtrans %}</th>
-      <th>{% trans %}User{% endtrans %}</th>
-      <th>{% trans %}Comments{% endtrans %}</th>
-      <th class="action">{% trans %}Action{% endtrans %}</th>
-    </tr>
-  <thead>
-  <tbody>
-  {% for item in market %}
-    <tr class="{% if item.closed %}error{% else %}success{% endif %}">
-      <td>{% include "ClubLayoutBundle:Default:boolean_inverse.html.twig" with {'flag':item.closed} %}</td>
-      <td><a href="{{ path('club_exchange_comment_index', {'id':item.id}) }}">{{ item.playtime|club_datetime }} ({{ item.playtime|club_ago }})</a></td>
-      <td>{{ item.location.locationName }}</td>
-      <td>{{ item.user.name }}</td>
-      <td>{{ item.exchangeComments|length }}</td>
-      <td>
-      {% include "ClubLayoutBundle:Default:show_link.html.twig" with {'url':path('club_exchange_comment_index', { 'id':item.id })} %}
-      {% if item.user == app.user %}
-        {% include "ClubLayoutBundle:Default:edit_link.html.twig" with {'url':path('club_exchange_exchange_edit', { 'id':item.id })} %}
-        {% include "ClubLayoutBundle:Default:delete_link.html.twig" with {'url':path('club_exchange_exchange_delete', { 'id':item.id })} %}
-      {% endif %}
-      </td>
-    </tr>
-  {% else %}
-    <tr>
-      <td colspan="6">{% trans %}There are not requests in the exchange.{% endtrans %}</td>
-    </tr>
-  {% endfor %}
-  </tbody>
-</table>
+<table class="table table-striped">
+    <thead>
+        <tr>
+            <th>{% trans %}Play time{% endtrans %}</th>
+            <th>{% trans %}Location{% endtrans %}</th>
+            <th>{% trans %}User{% endtrans %}</th>
+            <th>{% trans %}Comments{% endtrans %}</th>
+            <th class="action">{% trans %}Action{% endtrans %}</th>
+        </tr>
+        <thead>
+            <tbody>
+            {% for item in market %}
+            <tr>
+                <td><a href="{{ path('club_exchange_comment_index', {'id':item.id}) }}">{{ item.playtime|club_datetime }} ({{ item.playtime|club_ago }})</a></td>
+                <td>{{ item.location.locationName }}</td>
+                <td>{{ item.user.name }}</td>
+                <td>{{ item.exchangeComments|length }}</td>
+                <td>
+                    {% include "ClubLayoutBundle:Default:show_link.html.twig" with {'url':path('club_exchange_comment_index', { 'id':item.id })} %}
+                    {% if item.user == app.user %}
+                    {% include "ClubLayoutBundle:Default:edit_link.html.twig" with {'url':path('club_exchange_exchange_edit', { 'id':item.id })} %}
+                    {% include "ClubLayoutBundle:Default:delete_link.html.twig" with {'url':path('club_exchange_exchange_delete', { 'id':item.id })} %}
+                    {% endif %}
+                </td>
+            </tr>
+            {% else %}
+            <tr>
+                <td colspan="5">{% trans %}There are not requests in the exchange.{% endtrans %}</td>
+            </tr>
+            {% endfor %}
+            </tbody>
+        </table>
 
-{% endblock %}
+        {% endblock %}
