--- a/src/Club/RankingBundle/Resources/views/AdminRanking/edit.html.twig
+++ b/src/Club/RankingBundle/Resources/views/AdminRanking/edit.html.twig
@@ -5,5 +5,5 @@
 {% endblock %}
 
 {% block body %}
-{% include "ClubLayoutBundle:Default:form.html.twig" with {'path':path('club_match_adminranking_edit', {'id':league.id})} %}
+{% include "ClubLayoutBundle:Default:form.html.twig" with {'path':path('club_ranking_adminranking_edit', {'id':ranking.id})} %}
 {% endblock %}
