--- a/src/Club/UserBundle/Resources/views/Auth/login.html.twig
+++ b/src/Club/UserBundle/Resources/views/Auth/login.html.twig
@@ -1,7 +1,5 @@
-{% extends "ClubLayoutBundle:Default:base.html.twig" %}
+{% extends "ClubLayoutBundle:Default:auth.html.twig" %}
 
 {% block body %}
-
 {% include "ClubUserBundle:Auth:login_form.html.twig" %}
-
 {% endblock %}
