--- a/src/Club/UserBundle/Resources/views/Auth/resetPassword.html.twig
+++ b/src/Club/UserBundle/Resources/views/Auth/resetPassword.html.twig
@@ -1,18 +1,25 @@
-{% extends "ClubLayoutBundle:Default:base.html.twig" %}
+{% extends "ClubLayoutBundle:Default:auth.html.twig" %}
 
 {% block body %}
+<div class="container">
 
-{% include "ClubFormExtraBundle:Default:flash.html.twig" %}
+    <h2 class="form-signin-heading">{% trans %}Reset your password{% endtrans %}</h2>
+    <p>{% trans %}You have received an email with a link to our reset password page, please set a new password for your profile.{% endtrans %}</p>
 
-<form method="POST" action="{{ path('auth_reset', {'hash':forgot.hash}) }}" class="horizontal">
-
-    {{ form_widget(form) }}
-    <div class="control-group">
-        <div class="controls">
-            <button type="submit" class="btn btn-primary">{% trans %}Set password{% endtrans %}</button>
+    <div class="panel panel-primary">
+        {{ form_start(form) }}
+        {{ form_row(form.password, {'attr':{'placeholder':'Member number'|trans}}) }}
+        <div class="form-group">
+            <div class="col-sm-offset-2 col-sm-10">
+                <button class="btn btn-lg btn-primary" type="submit">{% trans %}Set password{% endtrans %}</button>
+            </div>
         </div>
-    </div>
 
-</form>
+        {{ form_end(form) }}
+
+        <div style="clear: both;"></div>
+
+    </div>
+</div>
 
 {% endblock %}
