--- a/src/Club/LayoutBundle/Resources/views/Default/fields.html.twig
+++ b/src/Club/LayoutBundle/Resources/views/Default/fields.html.twig
@@ -1,6 +1,24 @@
 {% block form_row %}
 {% spaceless %}
     <div class="form-group {% if errors|length > 0%}has-error{% endif %}">
+        {% if form.vars.block_prefixes.1 == 'checkbox' %}
+
+        <div class="col-sm-offset-2 col-sm-10">
+            {{ form_widget(form) }}
+            <span style="padding-left: 10px;"></span>
+            {{ form_label(form) }}
+
+            {% if help is defined %}
+            {% for h in help %}
+            <small><span class="help-block">{{ h|raw|trans }}</span></small>
+            {% endfor %}
+            {% endif %}
+
+            {{ form_errors(form) }}
+        </div>
+
+        {% else %}
+
         {{ form_label(form) }}
         <div class="col-sm-10">
             {{ form_widget(form) }}
@@ -13,6 +31,8 @@
 
             {{ form_errors(form) }}
         </div>
+
+        {% endif %}
     </div>
 {% endspaceless %}
 {% endblock form_row %}
