--- a/src/Club/NewsBundle/Resources/views/AdminAnnouncement/edit.html.twig
+++ b/src/Club/NewsBundle/Resources/views/AdminAnnouncement/edit.html.twig
@@ -4,7 +4,14 @@
 {% include "ClubNewsBundle:AdminAnnouncement:header.html.twig" %}
 {% endblock %}
 
-
 {% block body %}
-{% include "ClubLayoutBundle:Default:form.html.twig" with {'path':path('club_news_adminannouncement_edit', {'id':announcement.id})} %}
+
+{{ form_start(form) }}
+{{ form_row(form.message) }}
+{{ form_row(form.start_date) }}
+{{ form_row(form.end_date) }}
+{{ form_row(form.save, {'label':'Save changes'|trans}) }}
+
+{{ form_end(form) }}
+
 {% endblock %}
