--- a/src/Club/LayoutBundle/Resources/views/Default/submit_button.html.twig
+++ b/src/Club/LayoutBundle/Resources/views/Default/submit_button.html.twig
@@ -1,4 +1,5 @@
-<div class="form-actions">
-  <button {% if novalidate is defined %}formnovalidate="true"{% endif %} type="submit" class="btn btn-primary">{% if button is defined %}{{ button }}{% else %}{% trans %}Save changes{% endtrans %}{% endif %}</button>
+<div class="form-group">
+    <div class="col-sm-offset-2 col-sm-10">
+        <button {% if novalidate is defined %}formnovalidate="true"{% endif %} type="submit" class="btn btn-primary">{% if button is defined %}{{ button }}{% else %}{% trans %}Save changes{% endtrans %}{% endif %}</button>
+    </div>
 </div>
-
