--- a/src/Club/LayoutBundle/Resources/views/Default/form.html.twig
+++ b/src/Club/LayoutBundle/Resources/views/Default/form.html.twig
@@ -1,4 +1,4 @@
-<form method="post" action="{{ path }}" class="form-horizontal" {% if form is defined %}{{ form_enctype(form) }}{% endif %}>
+<form method="post" action="{{ path }}" class="form-horizontal" {% if form is defined %}{{ form_enctype(form) }}{% endif %} role="form">
     {% if legend is defined %}<legend>{{ legend}}</legend>{% endif %}
     {% if form is defined %}{{ form_widget(form) }}{% endif %}
     {% include "ClubLayoutBundle:Default:submit_button.html.twig" %}
